--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
          position: sticky;
          top: 0%;
          background-color: white;
+         z-index: 1;
 }
 
 .Navbar__1__title{
@@ -51,6 +52,28 @@ body{
          display: flex;
          gap: 20px;
          align-items: center;
+}
+
+.mylearning
+{
+    position: relative;
+    cursor: pointer;
+}
+
+.mylearning__popup
+{
+    position: absolute;
+    background-color: white;
+    border: solid black 1px;
+    width: 100px;
+    top: 150%;
+    padding: 20px;
+    right: 0;
+    display: none;
+}
+
+.mylearning:hover .mylearning__popup{
+    display: block;
 }
 
 .Categories{
