--- a/style.css
+++ b/style.css
@@ -90,6 +90,16 @@ body{
                       color: white;
                       padding: 10px;
                       border-radius: 30px;
+                      cursor: pointer;
+                      border: solid #9935E8 1px;
+}
+
+.Categories p:hover {
+
+              transition: 1s;
+              background-color: transparent;
+              border: solid #9935E8 1px;
+              color: black;
 }
 .Sale-image{
 
@@ -108,6 +118,26 @@ body{
     position: absolute;
     top: 10%;
     left: 8%;
+    animation-name: zoom;
+    animation-duration: 1s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+}
+
+@keyframes zoom {
+
+            0%{
+                     transform: scale(0);
+                     opacity: 0;
+
+            }
+            100% {
+                    transform: scale(1);
+                    opacity: 1;
+
+            }
+
+
 }
 
 .Recommended{
