--- a/style.css
+++ b/style.css
@@ -53,7 +53,10 @@ body{
          gap: 20px;
          align-items: center;
 }
+.Navbar__4 {
 
+     display: none;
+}
 .mylearning
 {
     position: relative;
@@ -137,7 +140,6 @@ body{
 
             }
 
-
 }
 
 .Recommended{
@@ -155,12 +157,14 @@ body{
 
 .course-card {
 
-                width: 400px;
+                flex-grow: 1;
+                flex-basis: 20%;
+                margin: 5px;
 }
 
 .course-card img{
                   
-              
+              height: 50%;
               width: 100%;
 }
 
@@ -216,4 +220,39 @@ body{
                  justify-content: space-between;
                  margin: 20px;
                  align-items: center;
+   }
+
+   /* Media Queries      */
+
+   @media screen and (max-width:800px){
+
+       body{
+            font-size: 10px;
+       }
+   }
+
+   @media screen and (max-width:600px){
+
+
+       .course-card {
+
+                  flex-basis: 40%;
+       }
+
+       .Categories {
+
+                    display: none;
+       }
+
+       
+       .Navbar__2,.Navbar__3{
+
+         display: none;
+        
+       }
+       .Navbar__4{
+
+        display: block;
+   }
+    
    }
